<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#fff"
    android:gravity="center"
    android:clickable="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">


    <EditText
        android:padding="12dp"
        android:id="@id/email_field"
        android:inputType="textEmailAddress"
        android:hint="@string/email_field"
        android:gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <EditText
        android:maxLength="3"
        android:hint="234"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:padding="10dp"
        android:id="@+id/cc"
        android:gravity="center"
        android:inputType="phone"
        android:layout_width="80dp"
        android:layout_height="wrap_content" />

    <EditText
        android:maxLength="@integer/phone_length"
        android:hint="@string/phone"
        android:layout_centerHorizontal="true"
        android:layout_margin="16dp"
        android:padding="10dp"
        android:id="@id/phone_field"
        android:gravity="center"
        android:inputType="phone"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@id/continue_button"
        android:background="@drawable/button_login"
        android:layout_margin="15dp"
        android:layout_gravity="center_horizontal"
        android:text="Continue"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/contact_retriever_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>