<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="#fff"
    android:gravity="center"
    android:clickable="true"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <TextView
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="Received the pin ?"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:padding="12dp"
        android:id="@id/pin_field"
        android:inputType="phone"
        android:hint="enter it here"
        android:gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <Button
        android:id="@id/continue_button"
        android:background="@drawable/button_login"
        android:layout_margin="15dp"
        android:layout_gravity="center_horizontal"
        android:text="Continue"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <TextView

        android:id="@id/resend_textView"
        android:visibility="gone"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/resend_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:visibility="gone"
        android:background="@drawable/button_login"
        android:id="@id/resend_button"
        android:layout_margin="15dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/resend_button_text"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@id/phone_access_textView"
        android:textColor="@color/black"
        android:gravity="center"
        android:text="@string/misplace_phone"
        android:layout_width="250dp"
        android:layout_height="wrap_content" />

</LinearLayout>